--- a/eks.yaml
+++ b/eks.yaml
@@ -5,7 +5,7 @@ metadata:
   name: expense
   region: us-east-1
 
-managednodeGroups:
+managedNodeGroups:
   - name: ng-1
     instanceTypes: ["m5.large", "c3.large","c4.large","c5.large"]
     desiredCapacity: 3
