--- a/eks.yaml
+++ b/eks.yaml
@@ -2,11 +2,11 @@ apiVersion: eksctl.io/v1alpha5
 kind: ClusterConfig
 
 metadata:
-  name: expense
+  name: expense1
   region: us-east-1
 
 managedNodeGroups:
-  - name: ng-1
+  - name: expense
     instanceTypes: ["m5.large", "c3.large","c4.large","c5.large"]
     desiredCapacity: 3
     spot: true
